--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
 <h1>Michael Wiltshire</h1>
 <button onClick="alertButton()">CLICK MEH</button>
+<canvas class="background"></canvas>
 <script src="website.js"></script>
+<script src="particles.js-master/dist/particles.min.js"></script>
 </body>
 
 </html>
