gonna get ot this time

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <button onClick="alertButton()">CLICK MEH</button>
 <canvas class="background"></canvas>
 <script src="website.js"></script>
-<script src="particles.js-master/dist/particles.min.js"></script>
+<script src="node_modules/particlesjs/dist/particles.min.js"></script>
 </body>
 
 </html>
