lookin a lil nicer

--- a/index.html
+++ b/index.html
@@ -3,14 +3,21 @@
 
 <head>
 
-<link rel="stylesheet" href="website.css"/>
+	<link rel="stylesheet" href="website.css"/>
 </head>
+
 <body>
-<h1>Michael Wiltshire</h1>
-<button onClick="alertButton()">CLICK MEH</button>
-<canvas class="background"></canvas>
-<script src="website.js"></script>
-<script src="node_modules/particlesjs/dist/particles.min.js"></script>
+	<h1>Michael Wiltshire</h1>
+	<button onClick="alertButton()">CLICK MEH</button>
+
+	<div id="particles-js">
+		<h2>PARTICLES.JS</h2>
+
+	</div>
+
+	<script src="website.js"></script>
+
+
 </body>
 
 </html>
