--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
 </head>
 
 <body>
-	<h1>Michael Wiltshire</h1>
+	<h1></h1>
 	<button onClick="alertButton()">CLICK MEH</button>
 
 	<div id="particles-js">
-		<h2>PARTICLES.JS</h2>
+		<h2>Michael Wiltshire</h2>
 
 	</div>
 
-	<script src="website.js"></script>
+	<script src="particles.js"></script>
 
+
+	<script src="website.js"></script>
+	<script src="app.js"></script>
 
 </body>
 
