--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 
 <body>
 	<h1></h1>
-	<button onClick="alertButton()">CLICK MEH</button>
+	<div class="button-group">
+		<a href="https://www.linkedin.com/in/michael-wiltshire-45ba2a195/" target="_blank">
+			<button class="linkedin-button">
+				<img src="linkedin-logo-png-1840.png" alt="LinkedIn Logo" class="linkedin-icon">
+			</button>
+		</a>
+
+		<a href="https://github.com/michael-wiltshire" target="_blank">
+			<button class="github-button">
+				<img src="github-mark.png" alt="Github Logo" class="github-icon">
+			</button>
+		</a>
+	</div>
 
 	<div id="particles-js">
 		<h2>Michael Wiltshire</h2>
